The names of the functions and imports are updated.

--- a/diagnostics/radiation/notebooks/bias_maps.ipynb
+++ b/diagnostics/radiation/notebooks/bias_maps.ipynb
@@ -11,38 +11,14 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "5b075361-6ff2-4378-ba4d-2980770c095c",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "env: PATH=/sw/spack-levante/texlive-live2021-l5o6sw/bin/x86_64-linux:/sw/spack-levante/texlive-live2021-l5o6sw/bin:/sw/spack-levante/git-lfs-2.11.0-oihcwo/bin:/sw/spack-levante/git-2.31.1-25ve7r/bin:/sw/spack-levante/jupyterhub/jupyterhub/bin:/sw/spack-workplace/spack/bin:/usr/share/Modules/bin:/usr/local/bin:/usr/bin:/usr/local/sbin:/usr/sbin:/home/b/b382257/.conda/envs/aqua/bin/\n"
-     ]
-    }
-   ],
-   "source": [
-    "from aqua import Reader, catalogue, inspect_catalogue\n",
-    "import sys\n",
-    "import os\n",
-    "import dask\n",
-    "dask.config.config.get('distributed').get('dashboard').update({'link':'{JUPYTERHUB_SERVICE_PREFIX}/proxy/{port}/status'})\n",
-    "%env PATH={os.environ[\"PATH\"]}:{sys.exec_prefix}/bin/"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
    "id": "ddcc6c7e-22a5-4e11-a08c-f99ba186e29b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "parent_directory = os.path.abspath(os.path.join(os.getcwd(), '..'))\n",
-    "sys.path.append(parent_directory)\n",
-    "\n",
-    "from functions import process_ceres_data, process_model_data\n",
-    "from functions import plot_bias, plot_maps, plot_mean_bias"
+    "import sys\n",
+    "sys.path.insert(0,'../../')\n",
+    "from radiation import process_ceres_data, process_model_data\n",
+    "from radiation import plot_bias, plot_maps, plot_mean_bias"
    ]
   },
   {
@@ -56,55 +32,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "fcd4be79-1aeb-4b9e-a88b-187979283bad",
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    },
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/b/b382257/.conda/envs/aqua/lib/python3.10/site-packages/xarray/core/indexing.py:1443: PerformanceWarning: Slicing is producing a large chunk. To accept the large\n",
-      "chunk and silence this warning, set the option\n",
-      "    >>> with dask.config.set(**{'array.slicing.split_large_chunks': False}):\n",
-      "    ...     array[indexer]\n",
-      "\n",
-      "To avoid creating the large chunks, set the option\n",
-      "    >>> with dask.config.set(**{'array.slicing.split_large_chunks': True}):\n",
-      "    ...     array[indexer]\n",
-      "  return self.array[key]\n",
-      "/home/b/b382257/.conda/envs/aqua/lib/python3.10/site-packages/xarray/core/indexing.py:1443: PerformanceWarning: Slicing is producing a large chunk. To accept the large\n",
-      "chunk and silence this warning, set the option\n",
-      "    >>> with dask.config.set(**{'array.slicing.split_large_chunks': False}):\n",
-      "    ...     array[indexer]\n",
-      "\n",
-      "To avoid creating the large chunks, set the option\n",
-      "    >>> with dask.config.set(**{'array.slicing.split_large_chunks': True}):\n",
-      "    ...     array[indexer]\n",
-      "  return self.array[key]\n"
-     ]
-    }
-   ],
-   "source": [
-    "TOA_icon_gm, reader_icon, data_icon, TOA_icon, TOA_icon_r360x180 = process_model_data(model =  'ICON' , exp = 'ngc3028' , source = 'lra-r100-monthly')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "163c2459-5436-4672-b950-d84f99952fb7",
-   "metadata": {
-    "tags": []
-   },
+   "execution_count": null,
+   "id": "d6eb52f5",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "TOA_ceres_clim_gm, TOA_ceres_ebaf_gm, TOA_ceres_diff_samples_gm, reader_ceres_toa, TOA_ceres_clim, TOA_ceres_diff_samples =process_ceres_data(exp = \"ebaf-toa41\", source = \"monthly\", TOA_icon_gm=TOA_icon_gm)"
+    "#ifs_4km = process_model_data(model =  'IFS' , exp = 'tco2559-ng5-cycle3' , source = 'lra-r100-monthly')\n",
+    "#ifs_9km = process_model_data(model =  'IFS' , exp = 'tco1279-orca025-cycle3' , source = 'lra-r100-monthly')\n",
+    "icon = process_model_data(model =  'ICON' , exp = 'ngc3028' , source = 'lra-r100-monthly')\n",
+    "ceres = process_ceres_data(exp = \"ebaf-toa41\", source = \"monthly\")"
    ]
   },
   {
@@ -114,6 +50,36 @@
    "source": [
     "### Plotting bias maps to show where biases are located\n",
     "To visualize the biases of a model climatology with respect to the observation (we use the CERES data for reference) we plot the bias map and use the plot_mean_bias function."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "46dff7ea",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'ttr'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "File \u001b[0;32m/work/bb1153/b382267/mamba_dir/mambaforge/envs/common_environment/lib/python3.10/site-packages/xarray/core/dataset.py:1393\u001b[0m, in \u001b[0;36mDataset._construct_dataarray\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m   1392\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m-> 1393\u001b[0m     variable \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_variables[name]\n\u001b[1;32m   1394\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mKeyError\u001b[39;00m:\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'ttr'",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[9], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m plot_mean_bias(ceres[\u001b[39m\"\u001b[39;49m\u001b[39mclim\u001b[39;49m\u001b[39m\"\u001b[39;49m], \u001b[39m'\u001b[39;49m\u001b[39mttr\u001b[39;49m\u001b[39m'\u001b[39;49m, \u001b[39m'\u001b[39;49m\u001b[39mCycle3_4km_IFS\u001b[39;49m\u001b[39m'\u001b[39;49m, ceres[\u001b[39m\"\u001b[39;49m\u001b[39mclim\u001b[39;49m\u001b[39m\"\u001b[39;49m], \u001b[39m'\u001b[39;49m\u001b[39m2020\u001b[39;49m\u001b[39m'\u001b[39;49m, \u001b[39m'\u001b[39;49m\u001b[39m2024\u001b[39;49m\u001b[39m'\u001b[39;49m, outputdir\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39m./\u001b[39;49m\u001b[39m'\u001b[39;49m, outputfig\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39m./\u001b[39;49m\u001b[39m'\u001b[39;49m)\n",
+      "File \u001b[0;32m/work/bb1153/b382267/AQUA/diagnostics/radiation/notebooks/../../radiation/functions.py:642\u001b[0m, in \u001b[0;36mplot_mean_bias\u001b[0;34m(TOA_model, var, model_label, TOA_ceres_clim, start_year, end_year, outputdir, outputfig)\u001b[0m\n\u001b[1;32m    639\u001b[0m plotlevels \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39marange(\u001b[39m-\u001b[39m\u001b[39m50\u001b[39m, \u001b[39m51\u001b[39m, \u001b[39m10\u001b[39m)\n\u001b[1;32m    641\u001b[0m \u001b[39m# Calculate the mean bias over the specified time range\u001b[39;00m\n\u001b[0;32m--> 642\u001b[0m mean_bias \u001b[39m=\u001b[39m (TOA_model[var]\u001b[39m.\u001b[39msel(time\u001b[39m=\u001b[39m\u001b[39mslice\u001b[39m(start_year, end_year))\u001b[39m.\u001b[39mmean(dim\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mtime\u001b[39m\u001b[39m'\u001b[39m) \u001b[39m-\u001b[39m TOA_ceres_clim[var])\u001b[39m.\u001b[39mmean(dim\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mtime\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m    643\u001b[0m \u001b[39m# Convert masked values to NaN\u001b[39;00m\n\u001b[1;32m    644\u001b[0m mean_bias \u001b[39m=\u001b[39m mean_bias\u001b[39m.\u001b[39mwhere(\u001b[39m~\u001b[39mmean_bias\u001b[39m.\u001b[39misnull(), np\u001b[39m.\u001b[39mnan)\n",
+      "File \u001b[0;32m/work/bb1153/b382267/mamba_dir/mambaforge/envs/common_environment/lib/python3.10/site-packages/xarray/core/dataset.py:1484\u001b[0m, in \u001b[0;36mDataset.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   1482\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39misel(\u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkey)\n\u001b[1;32m   1483\u001b[0m \u001b[39mif\u001b[39;00m utils\u001b[39m.\u001b[39mhashable(key):\n\u001b[0;32m-> 1484\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_construct_dataarray(key)\n\u001b[1;32m   1485\u001b[0m \u001b[39mif\u001b[39;00m utils\u001b[39m.\u001b[39miterable_of_hashable(key):\n\u001b[1;32m   1486\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_copy_listed(key)\n",
+      "File \u001b[0;32m/work/bb1153/b382267/mamba_dir/mambaforge/envs/common_environment/lib/python3.10/site-packages/xarray/core/dataset.py:1395\u001b[0m, in \u001b[0;36mDataset._construct_dataarray\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m   1393\u001b[0m     variable \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_variables[name]\n\u001b[1;32m   1394\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mKeyError\u001b[39;00m:\n\u001b[0;32m-> 1395\u001b[0m     _, name, variable \u001b[39m=\u001b[39m _get_virtual_variable(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_variables, name, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mdims)\n\u001b[1;32m   1397\u001b[0m needed_dims \u001b[39m=\u001b[39m \u001b[39mset\u001b[39m(variable\u001b[39m.\u001b[39mdims)\n\u001b[1;32m   1399\u001b[0m coords: \u001b[39mdict\u001b[39m[Hashable, Variable] \u001b[39m=\u001b[39m {}\n",
+      "File \u001b[0;32m/work/bb1153/b382267/mamba_dir/mambaforge/envs/common_environment/lib/python3.10/site-packages/xarray/core/dataset.py:196\u001b[0m, in \u001b[0;36m_get_virtual_variable\u001b[0;34m(variables, key, dim_sizes)\u001b[0m\n\u001b[1;32m    194\u001b[0m split_key \u001b[39m=\u001b[39m key\u001b[39m.\u001b[39msplit(\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m1\u001b[39m)\n\u001b[1;32m    195\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mlen\u001b[39m(split_key) \u001b[39m!=\u001b[39m \u001b[39m2\u001b[39m:\n\u001b[0;32m--> 196\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mKeyError\u001b[39;00m(key)\n\u001b[1;32m    198\u001b[0m ref_name, var_name \u001b[39m=\u001b[39m split_key\n\u001b[1;32m    199\u001b[0m ref_var \u001b[39m=\u001b[39m variables[ref_name]\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'ttr'"
+     ]
+    }
+   ],
+   "source": [
+    "plot_mean_bias(ceres[\"clim\"], 'ttr', 'Cycle3_4km_IFS', ceres[\"clim\"], '2020', '2024', outputdir='./', outputfig='./')"
    ]
   },
   {
@@ -141,9 +107,7 @@
      ]
     }
    ],
-   "source": [
-    "plot_mean_bias(TOA_icon, 'ttr', 'Cycle3_4km_IFS', TOA_ceres_clim, '2020', '2024')"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -214,9 +178,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (aqua)",
+   "display_name": "common_environment",
    "language": "python",
-   "name": "aqua"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -228,7 +192,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
