The import of the data and packages is modified.

--- a/diagnostics/radiation/notebooks/gregory.ipynb
+++ b/diagnostics/radiation/notebooks/gregory.ipynb
@@ -14,35 +14,12 @@
    "execution_count": 1,
    "id": "5b075361-6ff2-4378-ba4d-2980770c095c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "env: PATH=/sw/spack-levante/texlive-live2021-l5o6sw/bin/x86_64-linux:/sw/spack-levante/texlive-live2021-l5o6sw/bin:/sw/spack-levante/git-lfs-2.11.0-oihcwo/bin:/sw/spack-levante/git-2.31.1-25ve7r/bin:/sw/spack-levante/jupyterhub/jupyterhub/bin:/sw/spack-workplace/spack/bin:/usr/share/Modules/bin:/usr/local/bin:/usr/bin:/usr/local/sbin:/usr/sbin:/home/b/b382257/.conda/envs/aqua/bin/\n"
-     ]
-    }
-   ],
-   "source": [
-    "from aqua import Reader, catalogue, inspect_catalogue\n",
-    "import sys\n",
-    "import os\n",
-    "import dask\n",
-    "dask.config.config.get('distributed').get('dashboard').update({'link':'{JUPYTERHUB_SERVICE_PREFIX}/proxy/{port}/status'})\n",
-    "%env PATH={os.environ[\"PATH\"]}:{sys.exec_prefix}/bin/"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "ddcc6c7e-22a5-4e11-a08c-f99ba186e29b",
-   "metadata": {},
    "outputs": [],
    "source": [
-    "parent_directory = os.path.abspath(os.path.join(os.getcwd(), '..'))\n",
-    "sys.path.append(parent_directory)\n",
-    "from functions import process_model_data, process_era5_data\n",
-    "from functions import gregory_plot"
+    "import sys\n",
+    "sys.path.insert(0,'../../')\n",
+    "from radiation import process_ceres_data, process_model_data\n",
+    "from radiation import gregory_plot"
    ]
   },
   {
@@ -56,24 +33,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "e2abd5fc-bb80-4114-8804-c2505297554f",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "TOA_ifs_4km_gm, reader_ifs_4km, data_ifs_4km, TOA_ifs_4km, TOA_ifs_4km_r360x180 = process_model_data(model =  'IFS' , exp = 'tco2559-ng5-cycle3' , source = 'lra-r100-monthly')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "faacee3b-8a81-40d1-b275-d5691fd2909d",
+   "execution_count": null,
+   "id": "9192a8f0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "TOA_ifs_9km_gm, reader_ifs_9km, data_ifs_9km, TOA_ifs_9km, TOA_ifs_9km_r360x180 =process_model_data(model =  'IFS' , exp = 'tco1279-orca025-cycle3' , source = 'lra-r100-monthly')"
+    "ifs_4km = process_model_data(model =  'IFS' , exp = 'tco2559-ng5-cycle3' , source = 'lra-r100-monthly')\n",
+    "ifs_9km = process_model_data(model =  'IFS' , exp = 'tco1279-orca025-cycle3' , source = 'lra-r100-monthly')\n",
+    "icon = process_model_data(model =  'ICON' , exp = 'ngc3028' , source = 'lra-r100-monthly')\n",
+    "ceres = process_ceres_data(exp = \"ebaf-toa41\", source = \"monthly\")"
    ]
   },
   {
@@ -152,9 +120,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (aqua)",
+   "display_name": "common_environment",
    "language": "python",
-   "name": "aqua"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -166,7 +134,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
