--- a/diagnostics/radiation/notebooks/time_series.ipynb
+++ b/diagnostics/radiation/notebooks/time_series.ipynb
@@ -11,38 +11,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "5b075361-6ff2-4378-ba4d-2980770c095c",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "env: PATH=/sw/spack-levante/texlive-live2021-l5o6sw/bin/x86_64-linux:/sw/spack-levante/texlive-live2021-l5o6sw/bin:/sw/spack-levante/git-lfs-2.11.0-oihcwo/bin:/sw/spack-levante/git-2.31.1-25ve7r/bin:/sw/spack-levante/jupyterhub/jupyterhub/bin:/sw/spack-workplace/spack/bin:/usr/share/Modules/bin:/usr/local/bin:/usr/bin:/usr/local/sbin:/usr/sbin:/home/b/b382257/.conda/envs/aqua/bin/\n"
-     ]
-    }
-   ],
-   "source": [
-    "from aqua import Reader, catalogue, inspect_catalogue\n",
-    "import sys\n",
-    "import os\n",
-    "import dask\n",
-    "dask.config.config.get('distributed').get('dashboard').update({'link':'{JUPYTERHUB_SERVICE_PREFIX}/proxy/{port}/status'})\n",
-    "%env PATH={os.environ[\"PATH\"]}:{sys.exec_prefix}/bin/"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
-   "id": "ddcc6c7e-22a5-4e11-a08c-f99ba186e29b",
+   "id": "74c92f22",
    "metadata": {},
    "outputs": [],
    "source": [
-    "parent_directory = os.path.abspath(os.path.join(os.getcwd(), '..'))\n",
-    "sys.path.append(parent_directory)\n",
-    "from functions import process_ceres_data, process_model_data, process_era5_data, process_ceres_sfc_data\n",
-    "from functions import gregory_plot, barplot_model_data, plot_model_comparison_timeseries, plot_bias, plot_maps"
+    "import sys\n",
+    "sys.path.insert(0,'../../')\n",
+    "from radiation import process_ceres_data, process_model_data, process_era5_data\n",
+    "from radiation import gregory_plot, barplot_model_data, plot_model_comparison_timeseries, plot_bias, plot_maps"
    ]
   },
   {
@@ -56,37 +33,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "e2abd5fc-bb80-4114-8804-c2505297554f",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "TOA_ifs_4km_gm, reader_ifs_4km, data_ifs_4km, TOA_ifs_4km, TOA_ifs_4km_r360x180 = process_model_data(model =  'IFS' , exp = 'tco2559-ng5-cycle3' , source = 'lra-r100-monthly')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "faacee3b-8a81-40d1-b275-d5691fd2909d",
+   "execution_count": 11,
+   "id": "41d2e95b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
-    "TOA_ifs_9km_gm, reader_ifs_9km, data_ifs_9km, TOA_ifs_9km, TOA_ifs_9km_r360x180 = process_model_data(model =  'IFS' , exp = 'tco1279-orca025-cycle3' , source = 'lra-r100-monthly')"
+    "%load_ext autoreload\n",
+    "%autoreload 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "fcd4be79-1aeb-4b9e-a88b-187979283bad",
+   "execution_count": 3,
+   "id": "aaaff956",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/b/b382257/.conda/envs/aqua/lib/python3.10/site-packages/xarray/core/indexing.py:1443: PerformanceWarning: Slicing is producing a large chunk. To accept the large\n",
+      "/work/bb1153/b382267/mamba_dir/mambaforge/envs/common_environment/lib/python3.10/site-packages/xarray/core/indexing.py:1443: PerformanceWarning: Slicing is producing a large chunk. To accept the large\n",
       "chunk and silence this warning, set the option\n",
       "    >>> with dask.config.set(**{'array.slicing.split_large_chunks': False}):\n",
       "    ...     array[indexer]\n",
@@ -94,35 +69,45 @@
       "To avoid creating the large chunks, set the option\n",
       "    >>> with dask.config.set(**{'array.slicing.split_large_chunks': True}):\n",
       "    ...     array[indexer]\n",
-      "  return self.array[key]\n"
+      "  return self.array[key]\n",
+      "/work/bb1153/b382267/mamba_dir/mambaforge/envs/common_environment/lib/python3.10/site-packages/xarray/core/indexing.py:1443: PerformanceWarning: Slicing is producing a large chunk. To accept the large\n",
+      "chunk and silence this warning, set the option\n",
+      "    >>> with dask.config.set(**{'array.slicing.split_large_chunks': False}):\n",
+      "    ...     array[indexer]\n",
+      "\n",
+      "To avoid creating the large chunks, set the option\n",
+      "    >>> with dask.config.set(**{'array.slicing.split_large_chunks': True}):\n",
+      "    ...     array[indexer]\n",
+      "  return self.array[key]\n",
+      "/work/bb1153/b382267/mamba_dir/mambaforge/envs/common_environment/lib/python3.10/site-packages/xarray/core/indexing.py:1443: PerformanceWarning: Slicing with an out-of-order index is generating 21 times more chunks\n",
+      "  return self.array[key]\n",
+      "2023-10-11 20:16:39 :: eccodes :: WARNING  -> ShortName tprate have multiple grib codes associated: ['260048', '172228']\n",
+      "2023-10-11 20:16:39 :: eccodes :: WARNING  -> AQUA will take the first so that tprate -> 260048, please set up a correct fix if this does not look right\n",
+      "2023-10-11 20:16:39 :: eccodes :: WARNING  -> ShortName tcc have multiple grib codes associated: ['228164', '164']\n",
+      "2023-10-11 20:16:39 :: eccodes :: WARNING  -> AQUA will take the first so that tcc -> 228164, please set up a correct fix if this does not look right\n",
+      "2023-10-11 20:16:39 :: eccodes :: WARNING  -> ShortName sst have multiple grib codes associated: ['34', '151159']\n",
+      "2023-10-11 20:16:39 :: eccodes :: WARNING  -> AQUA will take the first so that sst -> 34, please set up a correct fix if this does not look right\n"
      ]
     }
    ],
    "source": [
-    "TOA_icon_gm, reader_icon, data_icon, TOA_icon, TOA_icon_r360x180 = process_model_data(model =  'ICON' , exp = 'ngc3028' , source = 'lra-r100-monthly')"
+    "ifs_4km = process_model_data(model =  'IFS' , exp = 'tco2559-ng5-cycle3' , source = 'lra-r100-monthly')\n",
+    "ifs_9km = process_model_data(model =  'IFS' , exp = 'tco1279-orca025-cycle3' , source = 'lra-r100-monthly')\n",
+    "icon = process_model_data(model =  'ICON' , exp = 'ngc3028' , source = 'lra-r100-monthly')\n",
+    "ceres_toa = process_ceres_data(exp = \"ebaf-toa41\", source = \"monthly\")\n",
+    "data_era5, reader_era5 = process_era5_data(exp = \"era5\" , source = \"monthly\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "163c2459-5436-4672-b950-d84f99952fb7",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# Call the method to retrieve CERES data\n",
-    "TOA_ceres_clim_gm, TOA_ceres_ebaf_gm, TOA_ceres_diff_samples_gm, reader_ceres_toa, TOA_ceres_clim, TOA_ceres_diff_samples =process_ceres_data(exp = \"ebaf-toa41\", source = \"monthly\", TOA_icon_gm=TOA_icon_gm)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "3fd28172-a109-466d-9fda-57aa9f40dc99",
+   "execution_count": null,
+   "id": "446a431c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_era5, reader_era5 = process_era5_data(exp = \"era5\" , source = \"monthly\")"
+    "models = [icon[\"gm\"].squeeze(), ifs_4km[\"gm\"].squeeze(), ifs_9km[\"gm\"].squeeze()]\n",
+    "linelabels = ['ICON 5 km', 'IFS 4.4 km', 'IFS 9 km']\n",
+    "plot_model_comparison_timeseries(models, linelabels, ceres_toa[\"anom_gm\"], ceres_toa[\"clim_gm\"])"
    ]
   },
   {
@@ -152,12 +137,7 @@
      ]
     }
    ],
-   "source": [
-    "#TOA_ceres_clim_gm, TOA_ceres_ebaf_gm, TOA_ceres_diff_samples_gm, _ = radiation_diag.process_ceres_data(exp=\"ebaf-toa41\", source=\"monthly\")\n",
-    "models = [TOA_icon_gm.squeeze(), TOA_ifs_4km_gm.squeeze(), TOA_ifs_9km_gm.squeeze()]\n",
-    "linelabels = ['ICON 5 km', 'IFS 4.4 km', 'IFS 9 km']\n",
-    "plot_model_comparison_timeseries(models, linelabels, TOA_ceres_diff_samples_gm, TOA_ceres_clim_gm)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -170,9 +150,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (aqua)",
+   "display_name": "common_environment",
    "language": "python",
-   "name": "aqua"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -184,7 +164,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
