final changing for seaice CLI

--- a/diagnostics/seaice/notebooks/seaice.ipynb
+++ b/diagnostics/seaice/notebooks/seaice.ipynb
@@ -46,11 +46,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mySetups = [{\"name\": \"IFS\", \"experiment\": \"tco1279-orca025-cycle3\", \"source\": \"2D_monthly_native\"},\n",
-    "            {\"name\": \"ICON\", \"experiment\": \"ngc3028\", \"source\": \"lra-r100-monthly\"},\n",
-    "            {\"name\": \"IFS\", \"experiment\": \"tco2559-ng5-cycle3\", \"source\": \"2D_monthly_0.25deg\"},\n",
-    "            {\"name\": \"OSI-SAF\", \"experiment\": \"osi-450\", \"source\": \"nh-monthly\"},\n",
-    "            {\"name\": \"OSI-SAF\", \"experiment\": \"osi-450\", \"source\": \"sh-monthly\"}]\n",
+    "mySetups = [{\"model\": \"IFS\", \"exp\": \"tco1279-orca025-cycle3\", \"source\": \"2D_monthly_native\"},\n",
+    "            {\"model\": \"ICON\", \"exp\": \"ngc3028\", \"source\": \"lra-r100-monthly\"},\n",
+    "            {\"model\": \"IFS\", \"exp\": \"tco2559-ng5-cycle3\", \"source\": \"2D_monthly_0.25deg\"},\n",
+    "            {\"model\": \"OSI-SAF\", \"exp\": \"osi-450\", \"source\": \"nh-monthly\"},\n",
+    "            {\"model\": \"OSI-SAF\", \"exp\": \"osi-450\", \"source\": \"sh-monthly\"}]\n",
     "\n",
     "# List of regions where SIE has to be calculated\n",
     "MyRegions = [\"Arctic\", \"Hudson Bay\", \"Southern Ocean\", \"Ross Sea\", \"Weddell Sea\",\n",
