The bias-mapping functions are modified.

--- a/diagnostics/radiation/notebooks/bar_plot.ipynb
+++ b/diagnostics/radiation/notebooks/bar_plot.ipynb
@@ -97,7 +97,7 @@
     "    datasets = [ceres, era5]\n",
     "else:\n",
     "    datasets = [ceres, icon, ifs_4km, ifs_9km] \n",
-    "model_names = None # ['ceres', 'icon', 'ifs 4.4 km', 'ifs 9 km']\n",
+    "model_names = None\n",
     "barplot_model_data(datasets, model_names)"
    ]
   },
