--- a/notebooks/reader/streaming.ipynb
+++ b/notebooks/reader/streaming.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47278,15 +47278,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[33m2023-10-31 14:27:08 :: eccodes :: WARNING  -> ShortName tprate have multiple grib codes associated: ['260048', '172228']\u001b[0m\n",
-      "\u001b[33m2023-10-31 14:27:08 :: eccodes :: WARNING  -> AQUA will take the first so that tprate -> 260048, please set up a correct fix if this does not look right\u001b[0m\n"
+      "\u001b[33m2023-10-31 15:00:14 :: eccodes :: WARNING  -> ShortName tprate have multiple grib codes associated: ['260048', '172228']\u001b[0m\n",
+      "\u001b[33m2023-10-31 15:00:14 :: eccodes :: WARNING  -> AQUA will take the first so that tprate -> 260048, please set up a correct fix if this does not look right\u001b[0m\n"
      ]
     },
     {
@@ -47675,7 +47675,7 @@
        "    offset:                     0\n",
        "    decumulated:                1\n",
        "    src_units:                  m\n",
-       "    units_fixed:                1</pre><div class='xr-wrap' style='display:none'><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'tprate'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>time</span>: 72</li><li><span>value</span>: 26306560</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-472e4418-5933-4282-b45b-de97b15daf68' class='xr-array-in' type='checkbox' checked><label for='section-472e4418-5933-4282-b45b-de97b15daf68' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>dask.array&lt;chunksize=(1, 26306560), meta=np.ndarray&gt;</span></div><div class='xr-array-data'><table>\n",
+       "    units_fixed:                1</pre><div class='xr-wrap' style='display:none'><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'tprate'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>time</span>: 72</li><li><span>value</span>: 26306560</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-de5b2273-b201-4012-9234-a2a208d05f6c' class='xr-array-in' type='checkbox' checked><label for='section-de5b2273-b201-4012-9234-a2a208d05f6c' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>dask.array&lt;chunksize=(1, 26306560), meta=np.ndarray&gt;</span></div><div class='xr-array-data'><table>\n",
        "    <tr>\n",
        "        <td>\n",
        "            <table style=\"border-collapse: collapse;\">\n",
@@ -47748,7 +47748,7 @@
        "</svg>\n",
        "        </td>\n",
        "    </tr>\n",
-       "</table></div></div></li><li class='xr-section-item'><input id='section-0b618714-a9e6-4971-9425-317e8fe40db9' class='xr-section-summary-in' type='checkbox'  checked><label for='section-0b618714-a9e6-4971-9425-317e8fe40db9' class='xr-section-summary' >Coordinates: <span>(3)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span>lat</span></div><div class='xr-var-dims'>(value)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>dask.array&lt;chunksize=(26306560,), meta=np.ndarray&gt;</div><input id='attrs-576f31b7-461d-4e2f-89a5-ec269c2d91ec' class='xr-var-attrs-in' type='checkbox' ><label for='attrs-576f31b7-461d-4e2f-89a5-ec269c2d91ec' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-aeb7efd2-f33f-4468-b421-d792fb8fb87f' class='xr-var-data-in' type='checkbox'><label for='data-aeb7efd2-f33f-4468-b421-d792fb8fb87f' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'><dt><span>long_name :</span></dt><dd>latitude</dd><dt><span>units :</span></dt><dd>degrees_north</dd><dt><span>standard_name :</span></dt><dd>latitude</dd></dl></div><div class='xr-var-data'><table>\n",
+       "</table></div></div></li><li class='xr-section-item'><input id='section-fd849398-7f06-4bbc-a2b9-fa733c92db4e' class='xr-section-summary-in' type='checkbox'  checked><label for='section-fd849398-7f06-4bbc-a2b9-fa733c92db4e' class='xr-section-summary' >Coordinates: <span>(3)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span>lat</span></div><div class='xr-var-dims'>(value)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>dask.array&lt;chunksize=(26306560,), meta=np.ndarray&gt;</div><input id='attrs-ee16abe5-2440-48a2-8e01-b87d65190bee' class='xr-var-attrs-in' type='checkbox' ><label for='attrs-ee16abe5-2440-48a2-8e01-b87d65190bee' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-99fbcb8e-5f78-4fbe-9075-fa7bc0c7fb65' class='xr-var-data-in' type='checkbox'><label for='data-99fbcb8e-5f78-4fbe-9075-fa7bc0c7fb65' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'><dt><span>long_name :</span></dt><dd>latitude</dd><dt><span>units :</span></dt><dd>degrees_north</dd><dt><span>standard_name :</span></dt><dd>latitude</dd></dl></div><div class='xr-var-data'><table>\n",
        "    <tr>\n",
        "        <td>\n",
        "            <table style=\"border-collapse: collapse;\">\n",
@@ -47803,7 +47803,7 @@
        "</svg>\n",
        "        </td>\n",
        "    </tr>\n",
-       "</table></div></li><li class='xr-var-item'><div class='xr-var-name'><span>lon</span></div><div class='xr-var-dims'>(value)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>dask.array&lt;chunksize=(26306560,), meta=np.ndarray&gt;</div><input id='attrs-fc6e48ef-64e0-42b3-a8cf-94c0e866b13a' class='xr-var-attrs-in' type='checkbox' ><label for='attrs-fc6e48ef-64e0-42b3-a8cf-94c0e866b13a' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-22b40d0e-20b9-4aea-92db-d717f25973ab' class='xr-var-data-in' type='checkbox'><label for='data-22b40d0e-20b9-4aea-92db-d717f25973ab' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'><dt><span>long_name :</span></dt><dd>longitude</dd><dt><span>units :</span></dt><dd>degrees_east</dd><dt><span>standard_name :</span></dt><dd>longitude</dd></dl></div><div class='xr-var-data'><table>\n",
+       "</table></div></li><li class='xr-var-item'><div class='xr-var-name'><span>lon</span></div><div class='xr-var-dims'>(value)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>dask.array&lt;chunksize=(26306560,), meta=np.ndarray&gt;</div><input id='attrs-0b854df0-24f9-467a-9b8c-6bfe8b48b2ca' class='xr-var-attrs-in' type='checkbox' ><label for='attrs-0b854df0-24f9-467a-9b8c-6bfe8b48b2ca' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-94c368f2-170b-405a-a610-9891d70c1365' class='xr-var-data-in' type='checkbox'><label for='data-94c368f2-170b-405a-a610-9891d70c1365' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'><dt><span>long_name :</span></dt><dd>longitude</dd><dt><span>units :</span></dt><dd>degrees_east</dd><dt><span>standard_name :</span></dt><dd>longitude</dd></dl></div><div class='xr-var-data'><table>\n",
        "    <tr>\n",
        "        <td>\n",
        "            <table style=\"border-collapse: collapse;\">\n",
@@ -47858,7 +47858,7 @@
        "</svg>\n",
        "        </td>\n",
        "    </tr>\n",
-       "</table></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>time</span></div><div class='xr-var-dims'>(time)</div><div class='xr-var-dtype'>datetime64[ns]</div><div class='xr-var-preview xr-preview'>2020-01-20 ... 2020-01-22T23:00:00</div><input id='attrs-dc7898f7-536c-43ea-8480-fd234e26ca6c' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-dc7898f7-536c-43ea-8480-fd234e26ca6c' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-4e1612db-d9f6-4344-82af-adc529ece167' class='xr-var-data-in' type='checkbox'><label for='data-4e1612db-d9f6-4344-82af-adc529ece167' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([&#x27;2020-01-20T00:00:00.000000000&#x27;, &#x27;2020-01-20T01:00:00.000000000&#x27;,\n",
+       "</table></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>time</span></div><div class='xr-var-dims'>(time)</div><div class='xr-var-dtype'>datetime64[ns]</div><div class='xr-var-preview xr-preview'>2020-01-20 ... 2020-01-22T23:00:00</div><input id='attrs-0e340a7e-44c5-4108-981b-40f210ab9f8d' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-0e340a7e-44c5-4108-981b-40f210ab9f8d' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-08c66f28-58da-49e5-b75b-db404a6c3fed' class='xr-var-data-in' type='checkbox'><label for='data-08c66f28-58da-49e5-b75b-db404a6c3fed' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([&#x27;2020-01-20T00:00:00.000000000&#x27;, &#x27;2020-01-20T01:00:00.000000000&#x27;,\n",
        "       &#x27;2020-01-20T02:00:00.000000000&#x27;, &#x27;2020-01-20T03:00:00.000000000&#x27;,\n",
        "       &#x27;2020-01-20T04:00:00.000000000&#x27;, &#x27;2020-01-20T05:00:00.000000000&#x27;,\n",
        "       &#x27;2020-01-20T06:00:00.000000000&#x27;, &#x27;2020-01-20T07:00:00.000000000&#x27;,\n",
@@ -47894,7 +47894,7 @@
        "       &#x27;2020-01-22T18:00:00.000000000&#x27;, &#x27;2020-01-22T19:00:00.000000000&#x27;,\n",
        "       &#x27;2020-01-22T20:00:00.000000000&#x27;, &#x27;2020-01-22T21:00:00.000000000&#x27;,\n",
        "       &#x27;2020-01-22T22:00:00.000000000&#x27;, &#x27;2020-01-22T23:00:00.000000000&#x27;],\n",
-       "      dtype=&#x27;datetime64[ns]&#x27;)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-cd1d31f3-cb16-41ee-8fb4-2f7edd5f3306' class='xr-section-summary-in' type='checkbox'  ><label for='section-cd1d31f3-cb16-41ee-8fb4-2f7edd5f3306' class='xr-section-summary' >Indexes: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-index-name'><div>time</div></div><div class='xr-index-preview'>PandasIndex</div><div></div><input id='index-1afd420d-8449-4cc3-bc4b-476604eddb5b' class='xr-index-data-in' type='checkbox'/><label for='index-1afd420d-8449-4cc3-bc4b-476604eddb5b' title='Show/Hide index repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-index-data'><pre>PandasIndex(DatetimeIndex([&#x27;2020-01-20 00:00:00&#x27;, &#x27;2020-01-20 01:00:00&#x27;,\n",
+       "      dtype=&#x27;datetime64[ns]&#x27;)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-f06bc577-eb9c-4a3f-b965-891e8baca115' class='xr-section-summary-in' type='checkbox'  ><label for='section-f06bc577-eb9c-4a3f-b965-891e8baca115' class='xr-section-summary' >Indexes: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-index-name'><div>time</div></div><div class='xr-index-preview'>PandasIndex</div><div></div><input id='index-0b809cad-4e48-4254-82b1-7c56e21af8dd' class='xr-index-data-in' type='checkbox'/><label for='index-0b809cad-4e48-4254-82b1-7c56e21af8dd' title='Show/Hide index repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-index-data'><pre>PandasIndex(DatetimeIndex([&#x27;2020-01-20 00:00:00&#x27;, &#x27;2020-01-20 01:00:00&#x27;,\n",
        "               &#x27;2020-01-20 02:00:00&#x27;, &#x27;2020-01-20 03:00:00&#x27;,\n",
        "               &#x27;2020-01-20 04:00:00&#x27;, &#x27;2020-01-20 05:00:00&#x27;,\n",
        "               &#x27;2020-01-20 06:00:00&#x27;, &#x27;2020-01-20 07:00:00&#x27;,\n",
@@ -47930,9 +47930,9 @@
        "               &#x27;2020-01-22 18:00:00&#x27;, &#x27;2020-01-22 19:00:00&#x27;,\n",
        "               &#x27;2020-01-22 20:00:00&#x27;, &#x27;2020-01-22 21:00:00&#x27;,\n",
        "               &#x27;2020-01-22 22:00:00&#x27;, &#x27;2020-01-22 23:00:00&#x27;],\n",
-       "              dtype=&#x27;datetime64[ns]&#x27;, name=&#x27;time&#x27;, freq=None))</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-6c695cb2-9ab1-4fa3-857d-53f80ef56103' class='xr-section-summary-in' type='checkbox'  ><label for='section-6c695cb2-9ab1-4fa3-857d-53f80ef56103' class='xr-section-summary' >Attributes: <span>(22)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'><dt><span>paramId :</span></dt><dd>260048</dd><dt><span>dataType :</span></dt><dd>fc</dd><dt><span>numberOfPoints :</span></dt><dd>26306560</dd><dt><span>typeOfLevel :</span></dt><dd>surface</dd><dt><span>stepUnits :</span></dt><dd>1</dd><dt><span>stepType :</span></dt><dd>instant</dd><dt><span>gridType :</span></dt><dd>reduced_gg</dd><dt><span>shortName :</span></dt><dd>tprate</dd><dt><span>units :</span></dt><dd>kg m**-2 s**-1</dd><dt><span>name :</span></dt><dd>Total precipitation</dd><dt><span>cfVarName :</span></dt><dd>tprate</dd><dt><span>missingValue :</span></dt><dd>3.4028234663852886e+38</dd><dt><span>totalNumber :</span></dt><dd>0</dd><dt><span>NV :</span></dt><dd>0</dd><dt><span>gridDefinitionDescription :</span></dt><dd>Gaussian Latitude/Longitude Grid</dd><dt><span>history :</span></dt><dd>2023-10-31 14:27:08 variable renamed by AQUA fixer;\n",
-       "2023-10-31 14:27:08 variable decumulated by AQUA fixer;\n",
-       "2023-10-31 14:27:13 units changed by AQUA fixer;\n",
+       "              dtype=&#x27;datetime64[ns]&#x27;, name=&#x27;time&#x27;, freq=None))</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-3e766d22-4b0c-4b8c-abfe-895542188bda' class='xr-section-summary-in' type='checkbox'  ><label for='section-3e766d22-4b0c-4b8c-abfe-895542188bda' class='xr-section-summary' >Attributes: <span>(22)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'><dt><span>paramId :</span></dt><dd>260048</dd><dt><span>dataType :</span></dt><dd>fc</dd><dt><span>numberOfPoints :</span></dt><dd>26306560</dd><dt><span>typeOfLevel :</span></dt><dd>surface</dd><dt><span>stepUnits :</span></dt><dd>1</dd><dt><span>stepType :</span></dt><dd>instant</dd><dt><span>gridType :</span></dt><dd>reduced_gg</dd><dt><span>shortName :</span></dt><dd>tprate</dd><dt><span>units :</span></dt><dd>kg m**-2 s**-1</dd><dt><span>name :</span></dt><dd>Total precipitation</dd><dt><span>cfVarName :</span></dt><dd>tprate</dd><dt><span>missingValue :</span></dt><dd>3.4028234663852886e+38</dd><dt><span>totalNumber :</span></dt><dd>0</dd><dt><span>NV :</span></dt><dd>0</dd><dt><span>gridDefinitionDescription :</span></dt><dd>Gaussian Latitude/Longitude Grid</dd><dt><span>history :</span></dt><dd>2023-10-31 15:00:14 variable renamed by AQUA fixer;\n",
+       "2023-10-31 15:00:14 variable decumulated by AQUA fixer;\n",
+       "2023-10-31 15:00:19 units changed by AQUA fixer;\n",
        "</dd><dt><span>long_name :</span></dt><dd>Total precipitation rate</dd><dt><span>factor :</span></dt><dd>0.2777777777777778</dd><dt><span>offset :</span></dt><dd>0</dd><dt><span>decumulated :</span></dt><dd>1</dd><dt><span>src_units :</span></dt><dd>m</dd><dt><span>units_fixed :</span></dt><dd>1</dd></dl></div></li></ul></div></div>"
       ],
       "text/plain": [
@@ -47959,7 +47959,7 @@
        "    units_fixed:                1"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47967,9 +47967,16 @@
    "source": [
     "reader = Reader(model=\"IFS\", exp= \"tco2559-ng5\", source=\"ICMGG_atm2d\")\n",
     "data = reader.retrieve()\n",
-    "new_data = reader.stream_data(data[\"tprate\"], aggregation='3D')\n",
+    "new_data = reader.stream(data[\"tprate\"], aggregation='3D')\n",
     "new_data"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
