--- a/notebooks/reader/streaming.ipynb
+++ b/notebooks/reader/streaming.ipynb
@@ -42,16 +42,16 @@
     "\n",
     "`aggregation` (str): the streaming frequency.\n",
     " Available frequencies: \n",
-    "- 1S, 5S etc ('S' stands for 'steps', if you want to keep the original data frequency. On hourly data, '5S' will return chuncks of 5 hours each.)\n",
+    "- 1S, 5S etc ('S' stands for 'steps', if you want to keep the original data frequency. On hourly data, '5S' will return chunks of 5 hours each.)\n",
     "  If no 'aggregation' is specified, '1S' will be the default streaming frequency.\n",
     "\n",
-    "- Panda's style: 1M, 7D etc. (keep in mind that the behavior of resampling in Pandas can be a bit counterintuitive when it comes to months (years) due to the variation in the length of months(years). It's safer to ask for multiple chuncks of just hours or days.) \n",
+    "- Panda's style: 1M, 7D etc. (keep in mind that the behavior of resampling in Pandas can be a bit counterintuitive when it comes to months (years) due to the variation in the length of months(years). It's safer to ask for multiple chunks of just hours or days.) \n",
     "\n",
     "- 'hourly', 'daily', 'weekly', 'monthly', 'yearly'.\n",
     "\n",
     "- 'hour', 'day', 'pentad', 'week', 'month', 'year', 'decade'  (and their plural).\n",
     "                                                                    \n",
-    "Keep in mind that if you want to stream chuncks of a certain number of days, months etc. you must use the Panda's notation (e.g if you want to stream chuncks of three months you should write `aggregation = '3M'`, `aggregation = '3months'` is not accepted).\n",
+    "Keep in mind that if you want to stream chunks of a certain number of days, months etc. you must use the Panda's notation (e.g if you want to stream chunks of three months you should write `aggregation = '3M'`, `aggregation = '3months'` is not accepted).\n",
     "\n",
     "Let's say we want to stream the data every three days. We need to call:"
    ]
@@ -41402,7 +41402,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As expected, the second chunck is shorter than the requested 3 days as we have reached the end date."
+    "As expected, the second chunk is shorter than the requested 3 days as we have reached the end date."
    ]
   },
   {
@@ -41412,7 +41412,7 @@
    "source": [
     "As mentioned above, if we don't specify the `aggregation` parameter, the data is streamed keeping the the original time resolution of input data\n",
     "(e.g. hour by hour for hourly data)\n",
-    "If we want chuncks of a certain number of steps, we need to specify it. (e.g. aggregations = '6S')\n"
+    "If we want chunks of a certain number of steps, we need to specify it. (e.g. aggregations = '6S')\n"
    ]
   },
   {
@@ -47117,7 +47117,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As requested, we got a six-hours chunck."
+    "As requested, we got a six-hours chunk."
    ]
   },
   {
