no streaming_generator bu stream_generator

--- a/notebooks/reader/datasets_lumi.ipynb
+++ b/notebooks/reader/datasets_lumi.ipynb
@@ -252,7 +252,7 @@
     "\n",
     "IFS model is available in this format for the develpoment integrations, as well as two 'mock dataset' which uses ERA5 variables: the \"fdb-test\" dataset and a \"fdb-long\" datasets, including some common climate variables, for a few days (the former) and few years (the latter). as described in the [GSV Reader fdb-test documentation](https://earth.bsc.es/gitlab/digital-twins/de_340/gsv_interface/-/wikis/Specification-of-fdb-test) and [GSV Reader fdb-long documentation](https://earth.bsc.es/gitlab/digital-twins/de_340/gsv_interface/-/wikis/Specifications-of-fdb-long).\n",
     "\n",
-    "The default is now returning a standard dask-enabled xarray thanks to recent improvements to the interface which allow lazy dask access also for FDB/GSV data sources. It is still possible to obtain an iteratori instead, specifying the `streaming_generator=True` keyword.\n",
+    "The default is now returning a standard dask-enabled xarray thanks to recent improvements to the interface which allow lazy dask access also for FDB/GSV data sources. It is still possible to obtain an iteratori instead, specifying the `stream_generator=True` keyword.\n",
     "\n",
     "Xarray/dask access (the default) is the recommended data access form, since it is the same used also for other data sources.\n",
     "\n",
@@ -876,19 +876,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It is also possible to get an iterator instead of a dask array using the keyword `streaming_generator=True`. For FDB sources this actually uses an iterator created directly by the GSV intake driver, instead of the streaming simulator. Notice the use, in this example, of the `aggregation` keyword, to specify aggregation/chunking, i.e. how much data to retrieve at each iteration. This keyword, if specified, has actually also a meaning for dask access, specifying chunk size, but is better to just use the defaults read from the catalogue and not to specify it. The defaults take into account memory limitations in chunking. Please check the documentation for further information on how to add a source from FDB."
+    "It is also possible to get an iterator instead of a dask array using the keyword `stream_generator=True`. For FDB sources this actually uses an iterator created directly by the GSV intake driver, instead of the streaming simulator. Notice the use, in this example, of the `aggregation` keyword, to specify aggregation/chunking, i.e. how much data to retrieve at each iteration. This keyword, if specified, has actually also a meaning for dask access, specifying chunk size, but is better to just use the defaults read from the catalogue and not to specify it. The defaults take into account memory limitations in chunking. Please check the documentation for further information on how to add a source from FDB."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-10-11 17:13:43 :: Reader :: WARNING  -> No default fixes found! No fixes available for model ERA5, experiment fdb, source fdb-test\n"
+     "ename": "KeyError",
+     "evalue": "'Experiment fdb not found in catalog for model ERA5.'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32m/home/b/b382075/AQUA/notebooks/reader/datasets_lumi.ipynb Cell 18\u001b[0m line \u001b[0;36m2\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Blevante/home/b/b382075/AQUA/notebooks/reader/datasets_lumi.ipynb#X23sdnNjb2RlLXJlbW90ZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39maqua\u001b[39;00m \u001b[39mimport\u001b[39;00m Reader\n\u001b[0;32m----> <a href='vscode-notebook-cell://ssh-remote%2Blevante/home/b/b382075/AQUA/notebooks/reader/datasets_lumi.ipynb#X23sdnNjb2RlLXJlbW90ZQ%3D%3D?line=1'>2</a>\u001b[0m reader \u001b[39m=\u001b[39m Reader(model\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39mERA5\u001b[39;49m\u001b[39m\"\u001b[39;49m, exp\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39mfdb\u001b[39;49m\u001b[39m\"\u001b[39;49m, source\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39mfdb-test\u001b[39;49m\u001b[39m\"\u001b[39;49m, regrid\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39mr200\u001b[39;49m\u001b[39m\"\u001b[39;49m, aggregation\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39mD\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n",
+      "File \u001b[0;32m~/AQUA/aqua/reader/reader.py:148\u001b[0m, in \u001b[0;36mReader.__init__\u001b[0;34m(self, model, exp, source, freq, fix, regrid, method, zoom, configdir, areas, datamodel, streaming, stream_generator, startdate, enddate, rebuild, loglevel, nproc, aggregation, verbose, exclude_incomplete, buffer)\u001b[0m\n\u001b[1;32m    145\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcat \u001b[39m=\u001b[39m intake\u001b[39m.\u001b[39mopen_catalog(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcatalog_file)\n\u001b[1;32m    147\u001b[0m \u001b[39m# check source existence\u001b[39;00m\n\u001b[0;32m--> 148\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39msource \u001b[39m=\u001b[39m check_catalog_source(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mcat, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mmodel, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mexp,\n\u001b[1;32m    149\u001b[0m                                    source, name\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39mcatalog\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n\u001b[1;32m    151\u001b[0m \u001b[39m# check that you defined zoom in a correct way\u001b[39;00m\n\u001b[1;32m    152\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mzoom \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_check_zoom(zoom)\n",
+      "File \u001b[0;32m~/AQUA/aqua/reader/reader_utils.py:25\u001b[0m, in \u001b[0;36mcheck_catalog_source\u001b[0;34m(cat, model, exp, source, name)\u001b[0m\n\u001b[1;32m     23\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mKeyError\u001b[39;00m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mModel \u001b[39m\u001b[39m{\u001b[39;00mmodel\u001b[39m}\u001b[39;00m\u001b[39m not found in \u001b[39m\u001b[39m{\u001b[39;00mname\u001b[39m}\u001b[39;00m\u001b[39m.\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m     24\u001b[0m \u001b[39mif\u001b[39;00m exp \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m cat[model]:\n\u001b[0;32m---> 25\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mKeyError\u001b[39;00m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mExperiment \u001b[39m\u001b[39m{\u001b[39;00mexp\u001b[39m}\u001b[39;00m\u001b[39m not found in \u001b[39m\u001b[39m{\u001b[39;00mname\u001b[39m}\u001b[39;00m\u001b[39m for model \u001b[39m\u001b[39m{\u001b[39;00mmodel\u001b[39m}\u001b[39;00m\u001b[39m.\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m     26\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m cat[model][exp]\u001b[39m.\u001b[39mkeys():\n\u001b[1;32m     27\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mKeyError\u001b[39;00m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mExperiment \u001b[39m\u001b[39m{\u001b[39;00mexp\u001b[39m}\u001b[39;00m\u001b[39m in \u001b[39m\u001b[39m{\u001b[39;00mname\u001b[39m}\u001b[39;00m\u001b[39m for model \u001b[39m\u001b[39m{\u001b[39;00mmodel\u001b[39m}\u001b[39;00m\u001b[39m has no sources\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'Experiment fdb not found in catalog for model ERA5.'"
      ]
     }
    ],
@@ -903,7 +909,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = reader.retrieve(startdate=\"20200125\", enddate=\"20200129\", var=\"tcc\", streaming_generator=True)"
+    "data = reader.retrieve(startdate=\"20200125\", enddate=\"20200129\", var=\"tcc\", stream_generator=True)"
    ]
   },
   {
@@ -1481,7 +1487,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = reader.retrieve(startdate=\"20200401\", enddate=\"20200404\", var=\"tcc\", streaming_generator=True)"
+    "data = reader.retrieve(startdate=\"20200401\", enddate=\"20200404\", var=\"tcc\", stream_generator=True)"
    ]
   },
   {
@@ -5063,7 +5069,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.11.4"
   },
   "orig_nbformat": 4,
   "vscode": {
