stream_generator in init of class

--- a/notebooks/reader/datasets_lumi.ipynb
+++ b/notebooks/reader/datasets_lumi.ipynb
@@ -252,7 +252,7 @@
     "\n",
     "IFS model is available in this format for the develpoment integrations, as well as two 'mock dataset' which uses ERA5 variables: the \"fdb-test\" dataset and a \"fdb-long\" datasets, including some common climate variables, for a few days (the former) and few years (the latter). as described in the [GSV Reader fdb-test documentation](https://earth.bsc.es/gitlab/digital-twins/de_340/gsv_interface/-/wikis/Specification-of-fdb-test) and [GSV Reader fdb-long documentation](https://earth.bsc.es/gitlab/digital-twins/de_340/gsv_interface/-/wikis/Specifications-of-fdb-long).\n",
     "\n",
-    "The default is now returning a standard dask-enabled xarray thanks to recent improvements to the interface which allow lazy dask access also for FDB/GSV data sources. It is still possible to obtain an iteratori instead, specifying the `stream_generator=True` keyword.\n",
+    "The default is now returning a standard dask-enabled xarray thanks to recent improvements to the interface which allow lazy dask access also for FDB/GSV data sources. It is still possible to obtain an iterator instead, specifying the `stream_generator=True` keyword.\n",
     "\n",
     "Xarray/dask access (the default) is the recommended data access form, since it is the same used also for other data sources.\n",
     "\n",
@@ -886,7 +886,7 @@
    "outputs": [],
    "source": [
     "from aqua import Reader\n",
-    "reader = Reader(model=\"ERA5\", exp=\"fdb\", source=\"fdb-test\", regrid=\"r200\", aggregation=\"D\")"
+    "reader = Reader(model=\"ERA5\", exp=\"fdb\", source=\"fdb-test\", regrid=\"r200\", aggregation=\"D\", stream_generator=True)"
    ]
   },
   {
@@ -895,7 +895,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = reader.retrieve(startdate=\"20200125\", enddate=\"20200129\", var=\"tcc\", stream_generator=True)"
+    "data = reader.retrieve(startdate=\"20200125\", enddate=\"20200129\", var=\"tcc\")"
    ]
   },
   {
@@ -1473,7 +1473,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = reader.retrieve(startdate=\"20200401\", enddate=\"20200404\", var=\"tcc\", stream_generator=True)"
+    "data = reader.retrieve(startdate=\"20200401\", enddate=\"20200404\", var=\"tcc\")"
    ]
   },
   {
